# ppt-trans

./: .dockerignore  .env.build  .env.example  .env.local.backup  .env.local.bak  .env.production.example  .env.test  .env.test.example  .gitignore  API_ROUTES_SECURITY_IMPLEMENTATION_PLAN.md  CLAUDE.md  CODE_ANALYSIS_REPORT_UPDATED.md  CODE_ANALYSIS_UPDATE_REPORT.md  COMPLETE_API_ROUTES_MIGRATION_PLAN.md  COMPREHENSIVE_TEST_IMPROVEMENT_PLAN.md  CORRECTED_SECURITY_ANALYSIS_REPORT.md  CRITICAL_FIX_ROADMAP.md  CRITICAL_VERIFICATION_REPORT.md  CSRF_ADDITIONAL_SECURITY_PLAN.md  CSRF_CRITICAL_FIX_PLAN.md  CSRF_SECURITY_AUDIT_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DETAILED_FIX_IMPLEMENTATION_PLAN.md  DETAILED_FIX_PLAN.md  DEVELOPMENT_ACCOUNTS.md  E2E_SERVER_ACTIONS_MIGRATION_PLAN.md  ESLINT_FIX_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_PLAN_TO_SERVER_ACTIONS.md  MIGRATION_TO_STABLE_PATTERN.md  MVP_RELEASE_PLAN.md  NAVIGATION_VERIFICATION_REPORT.md  PHASE_PROMPTS_FOR_SONNET.md  PROJECT_STRUCTURE.md  QA_REVIEW_REPORT.md  QA_TEST_CHECKLIST.md  QUICK_START_GUIDE.md  README.md  (+46 more)
.serena/: project.yml
claudedocs/: CODE_ANALYSIS_REPORT.md  DETAILED_IMPLEMENTATION_PLAN.md  SERVER_ACTIONS_FIX_PLAN.md  app-state-analysis.md  e2e-test-analysis.md  e2e-test-fix-plan.md
deploy/: canary-config.json
docs/: 00_sequence.md  01_requirements_definition.md  02_functional_requirements.md  03_non_functional_requirements.md  04_detailed_specifications.md  05_payment_and_language_specifications.md  06_technical_updates_and_ui_specifications.md  API_ROUTES_MIGRATION_SUMMARY.md  (+38 more)
(+685 files in other folders)
